# parralel_RNN

./: README.md  pyproject.toml
parallel_rnn/: layer_parallel_rnn.py  models.py
tests/: test_layer.py
